# template-python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
template/: __init__.py  template.py
tests/: test_template.py
